Продолжаю работать на ФЗ Спринта №15. Добавлена логика работы с сущностью Item, удален класс ItemRepositoryImpl.